src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #F2EBE5;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: darkgreen;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}





.container {
  margin:0 auto;
  padding:10px 25px;
  color: #9F496E;
}

div.top {
  width: 96.5%;
  left: 0px;
  top: 5px;
  border-bottom: 5px solid;
  position: absolute;
}

div.topH {
  width: 96.5%;
  left: 0px;
  top: 31px;
  border-bottom: 5px solid;
  position: fixed;
}

div.bottom {
  width: 96.5%;
  left: 0px;
  bottom: 5px;
  border-top: 5px solid;
  position: absolute;
}

div.redleft {
  height: 200%;
  top: 0px;
  left: 25px;
  border-left: 5px solid;
  position: fixed;
}

div.redright {
  height: 200%;
  top: 0px;
  right: 25px;
  border-right: 5px solid;
  position: fixed;
}


div.blueleft {
  height: 200%;
  top: 0px;
  left: 40px;
  border-left: 5px solid;
  color: #405fab;
  position: fixed;
}

div.blueright {
  height: 200%;
  top: 0px;
  right: 40px;
  border-right: 5px solid;
  color: #405fab;
  position: fixed;
}


div.topleft {
  width: 10px;
  height: 25px;
  top: -5px;
  left: -5px;
  color: darkgreen;
  border-right: 5px solid;
  border-bottom: 5px solid;
  position: absolute
}

div.topright {
  width: 10px;
  height: 25px;
  top: -5px;
  right: -5px;
  color: darkgreen;
  border-left: 5px solid;
  border-bottom: 5px solid;
  position: absolute
}

div.topleftH {
  width: 10px;
  height: 25px;
  top: -5px;
  left: -5px;
  color: darkgreen;
  border-right: 5px solid;
  border-bottom: 5px solid;
  position: fixed
}

div.toprightH {
  width: 10px;
  height: 25px;
  top: -5px;
  right: -5px;
  color: darkgreen;
  border-left: 5px solid;
  border-bottom: 5px solid;
  position: fixed
}

div.bottomleft {
  width: 10px;
  height: 25px;
  bottom: -5px;
  left: -5px;
  color: darkgreen;
  border-right: 5px solid;
  border-top: 5px solid;
  position: absolute
}

div.bottomright {
  width: 10px;
  height: 25px;
  bottom: -5px;
  right: -5px;
  color: darkgreen;
  border-left: 5px solid;
  border-top: 5px solid;
  position: absolute
}

div.bottomSep {
  width: 96.5%;
  left: 0px;
  bottom: 5px;
  border-top: 5px solid;
  position: relative;
}

div.bottomFix {
  width: 96.5%;
  left: 0px;
  bottom: 5px;
  border-top: 5px solid;
  position: fixed;
}



table.navigator {
  position: fixed;
  top: 0%;
  width: 100%;
  background-color: #5a555a;
  color:rgb(250, 230, 205)
}

td.navigator {
  border-width: 0px;
  min-width: 200px;
  font-size: medium;
}




.filler {
  margin:0 auto;
  padding:10px 25px;
  width: 100%;
  height: 31px;
  top: -5px;
  left: -5px;
  border-right: 5px solid;
  border-bottom: 5px solid;
  position: fixed;
  border-color: #F2EBE5;
  background-color: #F2EBE5;
}

.fillerBottom {
  margin:0 auto;
  padding:10px 25px;
  width: 100%;
  height: 31px;
  bottom: -30px;
  left: -5px;
  border-right: 5px solid;
  border-top: 5px solid;
  position: fixed;
  border-color: #F2EBE5;
  background-color: #F2EBE5;
}











table {
  border-collapse: collapse;
  max-width: 90%;
  border-width: 3px;
  background-color: rgb(250, 230, 205);
}

th {
  font-size: large;
  border-style: solid;
  border-color: midnightblue;
  border-radius: 0px;
  border-width: 1.5px;
  padding: 10px;
  min-width: 70px;
  max-width: 100px;
  height: 50px;
}

td {
  font-size: large;
  border-style: solid;
  border-color: midnightblue;
  border-radius: 0px;
  border-width: 1.5px;
  width: fit-content;
  height: 50px;
  padding-left: 10px;
  padding-right: 10px;
}

.bold {
  font-weight: bold;
  border-left-width: 3px;
  border-right-width: 3px;
  background-color: #d09ab1;
  text-align: center;
}

.dates {
  min-width: 110px;
}

.totalc {
  border-left-width: 3px;
  border-right-width: 3px;
}

.totalr, .toprow {
  border-top-width: 3px;
  border-bottom-width: 3px
}

.toprow {
  background-color: #74809f;
}

.corner {
  background-color: #b7708f;
}

.small {
  font-size: 70%;
  padding-left: 2px;
  padding-right: 2px;
  max-width: 70px;
}

button {
  font-size: medium;
  margin: 10px;
  padding: 7px;
}

button.currency{
  position: relative;
  margin: 30px;
  right: 10%;
}

button.button{
  position: relative;
  margin: 30px;
  left: 30%;
}

td.button, th.button {
  font-size: large;
  border-style: solid;
  background-color: #F2EBE5;
  border-color: #F2EBE5;
  border-radius: 0px;
  border-width: 1.5px;
  width: 78.5%;
  text-align: left;
}

td.right {
  text-align: right;
}

.acct {
  min-width: 225px;
  padding: 0px;
}


.single {
  font-size: large;
  border-style: solid;
  border-color: midnightblue;
  border-radius: 0px;
  border-width: 1.5px;
  padding: 10px;
  min-width: 400px;
  max-width: 1000px;
  height: 20px;
}


p {
  max-width: 75%;
}

input{
  font-size: small;
}

select {
  font-size: medium;
  width: 170px;
}

select.currency {
  width: fit-content
}

.invisBackground {
  font-size: large;
  border-style: solid;
  background-color: #F2EBE5;
  border-color: #F2EBE5;
}

.detailsButtons {
  text-align: left;
  position: relative;
  right: 15px
}

.invisible {
  height: 0px;
  color:#F2EBE5;
  background-color: #F2EBE5;
  border-style: none;
  width: 75px;
}

.center {
  left: 0%;
  right: 0%;
}


.color1 {color: #9F496E;}
.color2 {color: #2B262D;}
.color3 {color: #c8a696;}
.color4 {color: darkgreen;}
.color5 {color: #405fab;}



h2 {
  margin-top: 60px;
}

